Bug 114304 - FILEOPEN: Frame is not displayed in header/footer
Summary: FILEOPEN: Frame is not displayed in header/footer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha1+
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0 target:6.0.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-12-07 09:55 UTC by Xisco Faulí
Modified: 2017-12-11 12:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (19.50 KB, application/msword)
2017-12-07 09:55 UTC, Xisco Faulí
Details
comparison MSO 2010 and LibreOffice 6.0 (33.23 KB, image/png)
2017-12-07 09:58 UTC, Xisco Faulí
Details
sampe2 (25.50 KB, application/msword)
2017-12-07 10:20 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-12-07 09:55:08 UTC
Created attachment 138266 [details]
sample

Steps to reproduce:
1. Open attached document

Observed behaviour: Frame with 'Text on the text box' is not displayed.

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 495ac1bc97f3deea8e13cb1a2b9f59d087873c3f
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); Calc: group threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2017-12-07 09:58:24 UTC
Created attachment 138267 [details]
comparison MSO 2010 and LibreOffice 6.0
Comment 2 Xisco Faulí 2017-12-07 09:59:51 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2017-10-21 17:52:33 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2017-10-21 20:30:27 +0200
commit eaa54fd26ed9f3f873a2721760dd0709202e927c (patch)
tree e5695bceae6ac243d28b5073eaf05c393e14d930
parent 35ef2f6f6c234dc624a542e936df84566cc81c51 (diff)
check seek succeeded

Bisected with: bibisect-linux64-6.0

Adding Cc: to Caolán McNamara
Comment 3 Xisco Faulí 2017-12-07 10:20:50 UTC
Created attachment 138268 [details]
sampe2

Another sample where a frame in the footer is gone
Comment 4 Xisco Faulí 2017-12-07 10:46:01 UTC
it seems it's only happening with frames in header/footer.
Also reproduced with attachment 108639 [details] from bug 52103 ( Page 2 and on )
Comment 5 Xisco Faulí 2017-12-07 13:18:16 UTC
Increasing severity/priority as this is affecting many documents...
Comment 6 Xisco Faulí 2017-12-07 13:21:59 UTC
it also affects frames in the lateral like attachment 62918 [details] from bug 47430
Comment 7 Caolán McNamara 2017-12-07 20:51:50 UTC
position to seek to isn't there though, so something preexisting wrong with that parser (or file files), looks safe to just break from the while loop in this case
Comment 8 Commit Notification 2017-12-08 09:23:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4e539eddb646e8a6a3a4743655255ce432e1653f

tdf#114304 break rather than return false on dodgy record length

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2017-12-08 14:18:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c8b76656c46d0d455393faec8d54f3a12c5ec617&h=libreoffice-6-0

tdf#114304 break rather than return false on dodgy record length

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2017-12-11 12:20:09 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 3af500580b1c82eabd60335c9ebc458a3f68850c
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded