tdf#114304 break rather than return false on dodgy record length

Change-Id: I1bc8c400147beb8688ed3afd7402b3d3f68a4a3a